<resources>
    <string name="app_name">Prototipo Banco</string>
    <string name="fondo_superior_promociones">promociones</string>
    <string name="dk_capital_" translatable="false">DK Capital Bank</string>
    <string name="subitulo_inicio">Tus ingresos, tu capital</string>
    <string name="mej_ofertas">Nuestras mejores ofertas:</string>
    <string name="accesibilidad">Accesibilidad</string>
    <string name="contactanos">Contáctanos</string>
    <string name="cajeros">Mapa de cajeros</string>
    <string name="acceso_bio">Acceso biométrico</string>
    <string name="pedir_dni">Introduzca su NIF o DNI</string>
    <string name="nif">NIF</string>
    <string name="contra">Contraseña</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="descrip_biometria">Acceso por biometría</string>
    <string name="pedir_contra">Introduzca su contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="contra_olvidada">¿Olvidaste tu contraseña?</string>
    <string name="funcion_ojo">Revelar contraseña</string>
    <string name="def_seguros">Consulta/Contrata seguros con un asesor personal (L-V 9:00-21:00)</string>
    <string name="def_urgencias">Solicita ayuda gratuita ante robos de tarjetas, emergencias con cuentas bancarias… (L-D, 24h, también disponible desde el extranjero)</string>
    <string name="def_atencion_cliente">Resuelve tus dudas con este número gratuito (L-V 8:00-22:00)</string>
    <string name="bizum" translatable="false">Bizum</string>
    <string name="acciones_rapidas">Acciones rápidas:</string>
    <string name="enviar_dinero">Enviar dinero</string>
    <string name="solicitar_dinero">Solicitar dinero</string>
    <string name="contactos_recientes">Contactos recientes:</string>
    <string name="ver_todos">Ver todos -></string>
    <string name="destinatario">Destinatario</string>
    <string name="introduce_contacto">Introduce un contacto</string>
    <string name="seleccionar_cantidad">Seleccionar cantidad</string>
    <string name="saldo">Saldo</string>
    <string name="concepto_opcional">Concepto (opcional)</string>
    <string name="confirmar">Confirmar</string>
    <string name="volver">Volver</string>
    <string name="manuel_a" translatable="false">Manuel A.</string>
    <string name="claudia_c" translatable="false">Claudia C.</string>
    <string name="juan_m" translatable="false">Juan M.</string>
    <string name="oscar_t">Óscar T.</string>
    <string name="nombre_cliente" translatable="false">Eufrasio Martínez</string>
    <string name="valor_saldo">5.777,23€</string>
    <string name="titulo_toolbar_base" translatable="false">Prueba</string>
    <string name="vacio" translatable="false">\0</string>
    <string name="descripción_contrato">Has contratado este servicio correctamente, en breve nos pondremos en contacto contigo</string>
    <string name="Contraseña_olvidada">¿Has olvidado tu contraseña?</string>
    <string name="IBAN" translatable="false">ES13 0230 7800 8394 0948 8129</string>
    <string name="informacion">Información</string>
    <string name="siguiente">Siguiente</string>
    <string name="aplicar">Aplicar</string>
    <string name="preferencias">Preferencias</string>
    <string name="correo_elec">Correo electrónico</string>
    <string name="nuevo_correo">Nuevo correo electrónico</string>
    <string name="correo">Correo</string>
    <string name="num_tlf">Número de teléfono</string>
    <string name="nuevo_tlf">Nuevo número de teléfono</string>
    <string name="pais">País</string>
    <string name="selec_pais">Selecciona un país</string>
    <string name="poblacion">Población</string>
    <string name="nueva_poblacion">Nueva población</string>
    <string name="idioma">Idioma</string>
    <string name="selec_idioma">Selecciona un idioma</string>
    <string name="alias">Alias</string>
    <string name="nuevo_alias">Nuevo alias</string>
    <string name="buzon_notificaciones">Buzón de\nnotificaciones</string>
    <string name="notificaciones_sin_leer">7 notificaciones sin leer</string>
    <string name="notificaciones_leidas">Notificaciones ya leídas</string>
    <string name="notif_multa_titulo">Multa de tráfico</string>
    <string name="notif_multa_desc">Asunto: Exceso de velocidad.</string>
    <string name="notif_multa_hora">20:50</string>
    <string name="notif_pago_game_titulo">Pago exitoso</string>
    <string name="notif_pago_game_desc">Pago completado en: Game.</string>
    <string name="notif_pago_game_hora">19:27</string>
    <string name="notif_bizum_walter_titulo">Bizum recibido</string>
    <string name="notif_bizum_walter_desc">+10€ de: Walter W.</string>
    <string name="notif_bizum_walter_hora">18:58</string>
    <string name="notif_renta_titulo">Declaración de la renta</string>
    <string name="notif_renta_desc">¡No olvides la cita anual!</string>
    <string name="notif_renta_hora">15:23</string>
    <string name="notif_nomina_titulo">Ingreso de nómina</string>
    <string name="notif_nomina_desc">Ingreso mensual: +1.900€.</string>
    <string name="notif_nomina_hora">13:53</string>
    <string name="notif_becas_titulo">Becas para estudiantes</string>
    <string name="notif_becas_desc">Consulta cómo pedir una beca.</string>
    <string name="notif_becas_hora">11:21</string>
    <string name="notif_transf_oscar_titulo">Transferencia exitosa</string>
    <string name="notif_transf_oscar_desc">A Óscar T. N. por: Viaje verano</string>
    <string name="notif_transf_oscar_hora">9:41</string>
    <string name="notif_pago_aliexpress_titulo">Pago exitoso</string>
    <string name="notif_pago_aliexpress_desc">Pago completado en: Aliexpress.</string>
    <string name="notif_ayer">Ayer</string>
    <string name="notif_domiciliado_spotify_titulo">Cobro de pago domiciliado</string>
    <string name="notif_domiciliado_spotify_desc">-5,99€ por: Spotify.</string>
    <string name="notif_bizum_federico_titulo">Bizum recibido</string>
    <string name="notif_bizum_federico_desc">+3,50€ de: Federico G. L.</string>
    <string name="perfil">Perfil</string>
    <string name="perfil_usuario">Perfil de Usuario</string>
    <string name="configurar_perfil">Configurar perfil</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="permisos_habilitados">Permisos habilitados:</string>
    <string name="falta_personalizar">Falta por personalizar:</string>
    <string name="face_id">Face ID</string>
    <string name="accesos_directos">Accesos directos</string>
    <string name="geolocalizacion">Geolocalización</string>
    <string name="permisos_notif">Permisos de notificaciones</string>
    <string name="foto_perfil">Foto de perfil</string>
    <string name="btn_inicio_sesion">Iniciar Sesión</string>
    <string name="vision">Visión</string>
    <string name="audicion">Audición</string>
    <string name="interaccion">Interacción</string>
    <string name="balance_generall">Balance General</string>
    <string name="comparativa_financieraa">Comparativa Financiera</string>
    <string name="anual">Anual</string>
    <string name="mensual">Mensual</string>
    <string name="semanal">Semanal</string>
    <string name="desde">Desde:</string>
    <string name="hasta">Hasta:</string>
    <string name="m" translatable="false">M</string>
    <string name="c" translatable="false">C</string>
    <string name="j" translatable="false">J</string>
    <string name="u00d3" translatable="false">Ó</string>
    <string name="introduce_un_contacto">Introduce un contacto</string>
    <string name="escribe_un_mensaje">Escribe un mensaje…</string>
    <string name="tu_oficina_m_s_ncercana_es">Tu oficina más\ncercana es:</string>
    <string name="r_o_vena_burgos" translatable="false">Río Vena (Burgos)</string>
    <string name="c_melancolia_7">C/Melancolía, 7</string>
    <string name="_947000000" translatable="false">947000000</string>
    <string name="atencion_al_cliente">Atención al cliente</string>
    <string name="_900_000_000" translatable="false">900 000 000</string>
    <string name="urgencias">Urgencias</string>
    <string name="_900_000_001" translatable="false">900 000 001</string>
    <string name="seguros">Seguros</string>
    <string name="_910_000_000" translatable="false">910 000 000</string>
    <string name="contratacion_de_nservicios">Contratación de\nServicios</string>
    <string name="acciones">Acciones</string>
    <string name="seleccione_su_activo">Seleccione su activo</string>
    <string name="populares">Populares:</string>
    <string name="apple" translatable="false">Apple</string>
    <string name="amazon" translatable="false">Amazon</string>
    <string name="tesla" translatable="false">Tesla</string>
    <string name="microsoft" translatable="false">Microsoft</string>
    <string name="cantidad_deseada">Cantidad deseada</string>
    <string name="num_acciones">Num. acciones</string>
    <string name="precio_de_accion">Precio de acción</string>
    <string name="precio_actual">Precio actual</string>
    <string name="precio_final">PRECIO FINAL</string>
    <string name="_00_0">00,0€</string>
    <string name="confirmar_pago">Confirmar pago</string>
    <string name="prestamos">Préstamos</string>
    <string name="siguiente_paso_prestamo">Para realizar un préstamo es necesario que se ponga en contacto con su oficina más cercana</string>
    <string name="acceda_al_servicio_al_cliente_n_cont_ctanos">Acceda al servicio al cliente\n¡Contáctanos! 📞</string>
    <string name="transferir">Transferir</string>
    <string name="balance" translatable="false">Balance</string>
    <string name="tus_tarjetas">Tus tarjetas:</string>
    <string name="gestion_de_carteras">Gestión de carteras:</string>
    <string name="cartera_1">Cartera 1</string>
    <string name="cartera_2">Cartera 2</string>
    <string name="anadir">Añadir</string>
    <string name="ltimos_movimientos">Últimos movimientos:</string>
    <string name="cafeter_a_polit_cnica_ubu">Cafetería Politécnica UBU</string>
    <string name="_4_99">-4,99€</string>
    <string name="bizum_from_walter_white" translatable="false">Bizum from: Walter White</string>
    <string name="_10">+10€</string>
    <string name="ver_m_s">Ver más</string>
    <string name="cajeros_y_oficinas_por_su_zona">Cajeros y oficinas por su zona</string>
    <string name="encuentra_tu_cajero_m_s_cercano">Encuentra tu cajero más cercano</string>
    <string name="activar_la_ubicaci_n">Activar la ubicación</string>
    <string name="inserte_para_filtrar_por_ciudad_o_cp">Inserte para filtrar por ciudad o CP…</string>
    <string name="ltimos_nmovimientos">Últimos\nmovimientos:</string>
    <string name="dd_mm_yyyy">dd/mm/aaaa</string>
    <string name="_14_mar_2026" translatable="false">14 MAR 2026</string>
    <string name="tienda_game_expedition_33">Tienda Game: Expedition 33</string>
    <string name="_49_99">-49,99€</string>
    <string name="pr_cticas_autoescuela">Prácticas autoescuela</string>
    <string name="_100">-100€</string>
    <string name="_28_feb_2026" translatable="false">28 FEB 2026</string>
    <string name="transferencia_n_mina">Transferencia: Nómina</string>
    <string name="_1900">+1.900€</string>
    <string name="_23_feb_2026" translatable="false">23 FEB 2026</string>
    <string name="propina_de_la_abuela">Propina de la abuela</string>
    <string name="_5_00">+5,00€</string>
    <string name="pc_componentes_m_ram">PC Componentes: M. RAM</string>
    <string name="_194_99">-194,99€</string>
    <string name="_1" translatable="false">1</string>
    <string name="seguridad">Seguridad</string>
    <string name="cambiar_contrase_a">Cambiar contraseña</string>
    <string name="contrase_a_anterior">Contraseña anterior</string>
    <string name="contrase_a_nueva">Contraseña nueva</string>
    <string name="logo">Logo</string>
    <string name="menu_principal">Menú principal</string>
    <string name="preguntas_frecuentes">Preguntas frecuentes</string>
</resources>