<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_seguridad"
            android:title="@string/seguridad" />
        <item
            android:id="@+id/nav_config"
            android:title="@string/configurar_perfil"/>
        <item
            android:id="@+id/nav_accesibilidad"
            android:title="@string/accesibilidad"/>
        <item
            android:id="@+id/nav_atencion_cl"
            android:title="@string/atencion_al_cliente"/>

        <item
            android:id="@+id/nav_mapa"
            android:title="@string/cajeros"/>

        <item
            android:id="@+id/nav_servicios"
            android:title="@string/contratacion_de_nservicios"/>

        <item
            android:id="@+id/nav_faq"
            android:title="@string/preguntas_frecuentes"/>

        <item
            android:id="@+id/nav_menu"
            android:title="@string/menu_principal"/>
    </group>
    <item
        android:id="@+id/nav_logout"
        android:title="@string/cerrar_sesion"/>
</menu>
