<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:background="@drawable/bg_formulario_inicio_sesion">

    <TextView
        android:id="@+id/tv_titulo_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cambiar_contrase_a"
        android:textColor="@color/oscuro"
        android:textSize="20sp"
        android:fontFamily="@font/inter_bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/et_contra_anterior"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_rellenables"
        android:hint="@string/contrase_a_anterior"
        android:inputType="numberPassword"
        android:paddingHorizontal="15dp"
        app:layout_constraintTop_toBottomOf="@id/tv_titulo_dialog" />

    <EditText
        android:id="@+id/et_contra_nueva"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_rellenables"
        android:hint="@string/contrase_a_nueva"
        android:inputType="numberPassword"
        android:paddingHorizontal="15dp"
        app:layout_constraintTop_toBottomOf="@id/et_contra_anterior" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_confirmar_contra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/confirmar"
        android:textAllCaps="false"
        app:backgroundTint="@color/oscuro"
        app:cornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/et_contra_nueva"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>